# terminal-manager

./: README.md  pyproject.toml
src/terminal_manager/: __init__.py  collection.py  command.py  defaults.py  error.py  errors.py  event.py  helpers.py  locker.py  manager.py  sensor.py  state.py  synchronizer.py  terminal.py
src/terminal_manager/default_collections/: __init__.py  const.py  linux.py  windows_cmd.py  windows_ps.py
